# inductive_biases

./: .env.example  .gitignore  README.md  pyproject.toml
ib/: capture_camera_params.py  coeffs_visualize.py  decoding.py  evaluate_mesh.py  evaluate_model.py  evaluation.py  fourier_grid.py  label_complexity_evaluation.py  preprocessing.py  pretrain_modulator.py  render_image_from_mesh.py  resampling.py  training.py  visualization.py  visualize_coeffs.py
ib/cli/: capture_camera_params.py  coeffs_visualize.py  evaluate_mesh.py  fourier_grid.py  training.py
ib/cli/tools/: pretrain_modulator.py
ib/cli/vis/: visualization.py
ib/conf/: config.yaml
ib/conf/model/: original_siren.yaml
ib/conf/model/inr/: siren.yaml
ib/conf/model/loss/: siren_sdf_loss.yaml
ib/conf/scene/: bedroom_1.yaml  lamp.yaml  siren_room.yaml  sofa.yaml  sphere.yaml  thai_statue.yaml
ib/conf/scene/dataset/: obj_dataset.yaml  xyz_dataset.yaml
ib/conf/trainer/: base_trainer.yaml
ib/configs/: config.yaml
ib/configs/evaluator/: base_evaluator.yaml
ib/configs/inr/: finer.yaml  siren.yaml  sirenfm.yaml  staf.yaml
ib/configs/loss/: l1_loss.yaml  l2_loss.yaml  siren_sdf_loss.yaml
ib/configs/model/: base_model.yaml  original_siren.yaml
ib/configs/model/inr/: relu_pe.yaml
ib/configs/scene/: scannet_room_1.yaml  scannet_room_2.yaml  scannet_room_3.yaml  scannet_sdf.yaml  siren_room.yaml  thai_statue.yaml  thai_statue_sdf.yaml
ib/configs/scene/dataset/: obj_dataset.yaml  ply_dataset.yaml  sdf_dataset.yaml  sparse_sdf_dataset.yaml  xyz_dataset.yaml
ib/configs/trainer/: base_trainer.yaml
ib/datasets/: pointcloud_datasets.py  resamplers.py  sdf_datasets.py
ib/metrics/: chamfer_distance.py  combined_metric.py  completeness.py  evaluator.py  fourier_freq.py  iou.py  label_complexity.py  local_curvature.py  lpips.py  normal_distance.py
ib/models/: base_model.py  decoders.py
ib/models/inrs/: common.py  finer.py  relu_pe.py  siren.py  sirenfm.py  staf.py  vainer.py
ib/models/losses/: sdf_losses.py  siren_losses.py
ib/scripts/: resampling.py  training.py
ib/utils/: callbacks.py  data.py  factory.py  geometry.py  labels.py  logging_module.py  model.py  pipeline.py  pointcloud.py  tensorboard.py
