[project]
name = "ib"
version = "0.1.0"
description = "Neural Network Inductive Biases for High-fidelity 3D Reconstruction"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.4.0",
    "numpy>=2.2.0",
    "open3d>=0.18.0",
    "plyfile>=1.1",
    "rich>=13.9.4",
    "scikit-image>=0.25.0",
    "scipy>=1.14.1",
    "tensorboard>=2.18.0",
    "torch==2.5.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[tool.uv]
package = true

[project.scripts]
decoding = "ib.decoding:app"
evaluation = "ib.evaluation:app"
resampling = "ib.resampling:app"
training = "ib.training:app"
