[project]
name = "ib"
version = "0.1.0"
description = "Neural Network Inductive Biases for High-fidelity 3D Reconstruction"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.4.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "open3d==0.19.0",
    "pandas>=2.2.3",
    "plyfile>=1.1",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "scikit-image>=0.25.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "wandb>=0.19.9",
]

[tool.uv]
package = true

[project.scripts]
# Training
training = "ib.cli.training:app"
# Evaluation
decoding = "ib.cli.decoding:app"
evaluate_mesh = "ib.cli.evaluate_mesh:app"
evaluate_model = "ib.cli.evaluate_model:app"
# Visualization
capture_camera_params = "ib.cli.vis.capture_camera_params:app"
coeffs_visualize = "ib.cli.vis.coeffs_visualize:app"
render_image_from_mesh = "ib.cli.vis.render_image_from_mesh:app"
visualization = "ib.cli.vis.visualization:app"
# Data
preprocessing = "ib.cli.preprocessing:app"
# Misc
fourier_grid = "ib.cli.tools.fourier_grid:app"
pretrain_modulator = "ib.cli.tools.pretrain_modulator:app"
